# BuzzBox_Office

./: .replit  README.md  main.py  pyproject.toml  replit.nix
attached_assets/: Pasted-1-Advanced-Sentiment-Analysis-and-NLP-Features-Emotion-Detection-Objective-Go-beyond-basic-senti-1740410214340.txt
moviepatch/BuzzBox_Office/: README.md  main.py  pyproject.toml
moviepatch/BuzzBox_Office/attached_assets/: Pasted-1-Advanced-Sentiment-Analysis-and-NLP-Features-Emotion-Detection-Objective-Go-beyond-basic-senti-1740410214340.txt
moviepatch/BuzzBox_Office/pages/: competitor_analysis.py  demographics.py  movie_search.py  predictive_analytics.py  trailer_generator.py
moviepatch/BuzzBox_Office/utils/: advanced_sentiment.py  mock_data.py  predictive_analytics.py  sentiment.py  trailer_generator.py  websocket_server.py
pages/: competitor_analysis.py  demographics.py  movie_search.py  predictive_analytics.py  trailer_generator.py
utils/: advanced_sentiment.py  mock_data.py  predictive_analytics.py  sentiment.py  trailer_generator.py  websocket_server.py
