[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "decorator>=5.2.1",
    "fastapi>=0.115.8",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "moviepy>=2.1.2",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "plotly>=6.0.0",
    "proglog>=0.1.10",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.2",
    "tqdm>=4.67.1",
    "twilio>=9.4.6",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]
